...
    <string name="original_on_this_phone">Original on this phone</string>
    <string name="other">Other</string>
    <string name="panoramas">Panoramas</string>
    <string name="password">Password</string>
    <string name="personal_icloud_library">Personal iCloud library</string>
    <string name="phone">Phone</string>
    <string name="photo_details_and_actions">Photo details and actions</string>
    <string name="photo_size">Photo size</string>
    <string name="photos">Photos</string>
    <string name="photos_service_has_not_been_checked">Photos service has not been checked</string>
    <string name="photos_service_is_available_for_this_account">Photos service is available for this account</string>
    <string name="photos_you_ve_marked_with_a_heart">Photos you\'ve marked with a heart</string>
    <string name="pixel_dimensions">%1$d × %2$d</string>
...
        <item quantity="one">%1$d cloud photo</item>
        <item quantity="other">%1$d cloud photos</item>
    </plurals>
    <string name="phone_photo_count">%1$d on this phone</string>
    <string name="close_details">Close details</string>
    <string name="megapixels">%1$s MP</string>
    <string name="photo_zoomed">Zoomed</string>
    <string name="photo_fit">Fit</string>
    <string name="toggle_photo_controls">Show or hide controls</string>
    <string name="reset_photo_zoom">Reset zoom</string>
    <string name="zoom_in_photo">Zoom in</string>
    <string name="phone_trash">Phone trash</string>
    <string name="on_this_phone">On this phone</string>
...
